--- a/scss/object/_area3.scss
+++ b/scss/object/_area3.scss
@@ -1,6 +1,7 @@
-#area3{
+#area3 {
   list-style: inherit;
-  .area3-upper, .area3-lower{
+  .area3-upper,
+  .area3-lower {
     max-width: 760px;
     margin: 0 auto;
     position: relative;
@@ -8,7 +9,7 @@
       max-width: 1300px;
     }
   }
-  .area3-lower{
+  .area3-lower {
     margin-top: 40px;
   }
   .heading2 {
@@ -65,6 +66,7 @@
     @include overTab {
       padding: 1rem 1rem;
       margin: 1rem;
+      padding-right: 100px;
     }
   }
   .list_design2 {
@@ -75,8 +77,7 @@
   }
   .list_design1 li {
     position: relative;
-    padding: 10px 20px;
-    // margin: 1rem;
+    padding: 20px 20px;
     padding-left: 63px;
     line-height: 30px;
     border-bottom: 2px dotted red;
@@ -84,7 +85,7 @@
     font-size: 24px;
     margin-bottom: 5px;
     @include overTab {
-      font-size: 30px;
+      font-size: 35px;
       margin-bottom: 30px;
       padding: 1rem 1rem;
       margin: 1rem;
@@ -123,16 +124,16 @@
   h3 {
     color: black;
     font-size: 17px;
-    border-left: solid 8px orange;/*左側の線*/
-    background: whitesmoke;/*背景色*/
-    margin-bottom: 5px;/*下のバーとの余白*/
+    border-left: solid 8px orange; /*左側の線*/
+    background: whitesmoke; /*背景色*/
+    margin-bottom: 5px; /*下のバーとの余白*/
     margin-top: 5px;
     margin-left: 10px;
     line-height: 1.5;
-    border-radius: 0 15px 15px 0;/*右側の角だけ丸く*/
+    border-radius: 0 15px 15px 0; /*右側の角だけ丸く*/
     padding: 0.5em;
     width: 85%;
-    list-style-type: none!important;
+    list-style-type: none !important;
     @include overTab {
       font-size: 25px;
       width: 50%;
@@ -140,7 +141,7 @@
       margin-top: 25px;
     }
   }
-  .area3-textarea1{
+  .area3-textarea1 {
     position: relative;
     margin: 2em 0;
     margin-top: 50px;
@@ -158,7 +159,7 @@
       width: 50%;
       max-width: 1300px;
     }
-    .area3-textarea-title{
+    .area3-textarea-title {
       position: absolute;
       display: inline-block;
       top: -40px;
@@ -166,7 +167,7 @@
       padding: 0 9px;
       height: 40px;
       line-height: 45px;
-      font-size: 30px;
+      font-size: 20px;
       background: #ea551c;
       color: #ffffff;
       font-weight: bold;
@@ -175,23 +176,16 @@
         font-size: 40px;
       }
     }
-    p{
+    p {
       font-size: 22px;
-      margin: 0; 
+      margin: 0;
       padding: 0;
+      @include overTab {
+        font-size: 30px;
+      }
     }
   }
-  // .area3-textarea2{
-  //   margin-bottom: 700px;
-  //   @include overTab {
-  //     margin-bottom: inherit;
-  //   }
-  // }
-  #emoji5:before {
-    content: "\026A0";
-    padding-right: 3px;
-  }
-  .mokumoku1{
+  .mokumoku1 {
     position: absolute;
     z-index: 2;
     top: 7%;
@@ -199,37 +193,38 @@
     transform: translate(-50%, -50%);
     transform: rotate(15deg);
     width: 120px;
-    height: 50px;
+    height: 60px;
     @include overTab {
       top: 9%;
-      left: 40%;
-      width: 350px;
+      left: 45%;
+      width: 230px;
       height: 120px;
     }
   }
-  .recommend1{
+  .recommend1 {
     position: absolute;
     z-index: 2;
-    font-size: 12px;
+    font-size: 20px;
     font-weight: bold;
-    top: 8%;
-    left: 67%;
+    top: 9%;
+    left: 73%;
     transform: translate(-50%, -50%);
-    transform:rotate(18deg);
+    transform: rotate(18deg);
     @include overTab {
-      top: 12%;
-      left: 42%;
-      font-size: 30px;
-    }
-    &::before{
-      font-family: "Font Awesome 5 Free";
-      content:'\f521';
-      padding:5px;
-      font-weight:900;
-      color:#FFDC00;
+      top: 13%;
+      left: 50%;
+      font-size: 40px;
     }
   }
-  .recommend2{
+  #emoji1:before {
+    content: "\01F440";
+    padding-right: 3px;
+  }
+  #emoji2:before {
+    content: "\01F447";
+    padding-right: 3px;
+  }
+  .recommend2 {
     position: absolute;
     z-index: 2;
     font-size: 15px;
@@ -237,24 +232,24 @@
     top: -1.5%;
     left: 60%;
     transform: translate(-50%, -50%);
-    transform:rotate(18deg);
+    transform: rotate(18deg);
     @include overTab {
       top: -2%;
       left: 46%;
       font-size: 26px;
     }
-    &::before{
+    &::before {
       font-family: "Font Awesome 5 Free";
-      content:'\f521';
-      padding:5px;
-      font-weight:900;
-      color:#FFDC00;
+      content: "\f521";
+      padding: 5px;
+      font-weight: 900;
+      color: #ffdc00;
     }
   }
-  .area3-image1{
-    width: 250px;
+  .area3-image1 {
+    width: 240px;
     position: absolute;
-    top: 111%;
+    top: 118%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 4;
@@ -269,11 +264,11 @@
     position: absolute;
     margin: 0 auto;
     width: auto;
-    top: 139%;
+    top: 155%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 200px;
-     @include overTab {
+    @include overTab {
       width: 440px;
       height: 260px;
       top: 80%;
@@ -281,10 +276,10 @@
     }
   }
 
-  .kira1{
+  .kira1 {
     width: 200px;
     position: absolute;
-    top: 103%;
+    top: 106%;
     left: 70%;
     transform: translate(-50%, -50%);
     z-index: 5;
@@ -294,10 +289,10 @@
       left: 80%;
     }
   }
-  .kira2{
+  .kira2 {
     width: 200px;
     position: absolute;
-    top: 103%;
+    top: 106%;
     left: 45%;
     transform: translate(-50%, -50%);
     z-index: 5;
@@ -307,10 +302,10 @@
       left: 75%;
     }
   }
-  .kira3{
+  .kira3 {
     width: 130px;
     position: absolute;
-    top: 103%;
+    top: 106%;
     left: 73%;
     transform: translate(-50%, -50%);
     transform: rotate(90deg);
@@ -321,15 +316,16 @@
       left: 84%;
     }
   }
-  .circle1, .circle2 {
+  .circle1,
+  .circle2 {
     position: absolute;
-    top: 115%;
-    left:50%;
+    top: 125%;
+    left: 50%;
     transform: translate(-50%, -50%);
     background: rgba(229, 250, 252, 0.858);
     border-radius: 50%;
     box-shadow: 0.375em 0.375em 0 0 rgb(210, 255, 174);
-    height: 9em;
+    height: 8em;
     width: 20em;
     @include overTab {
       height: 15em;
@@ -339,45 +335,32 @@
       transform: translate(-50%, -50%);
     }
   }
-  // .circle2{
-  //   top: 150%;
-  //   @include overTab {
-  //   top: 55%;
-  //   }
-  // }
-  .sim-text1, .sim-text2{
+  .sim-text1 {
     position: absolute;
     width: 220px;
-    top: 119%;
-    left:50%;
+    top: 129%;
+    left: 50%;
     padding: 5px 0;
     transform: translate(-50%, -50%);
     z-index: 5;
-    background-color:rgb(228, 8, 8) ;
+    background-color: rgb(228, 8, 8);
     text-align: center;
-    font-size: 1.5rem;
-    font-style: italic; 
-    letter-spacing: .1em; 
-    color: #fff; 
-    text-shadow: -3px 2px 0 #000; 
+    font-size: 1.2rem;
+    font-style: italic;
+    letter-spacing: 0.1em;
+    color: #fff;
+    text-shadow: -3px 2px 0 #000;
     @include overTab {
       font-size: 1.5rem;
       width: 350px;
       top: 45%;
-      left: 80%;   
+      left: 80%;
     }
   }
-  // .sim-text2{
-  //   top: 160%;
-  //   @include overTab {
-  //   top: 70%;
-  //   }
-  // }
-  .border1{
+  .border1 {
     margin: 0 auto;
     width: 90%;
     max-width: 1300px;
     border-bottom: 1px dashed red;
   }
-
 }
