--- a/scss/object/_area4.scss
+++ b/scss/object/_area4.scss
@@ -65,16 +65,17 @@
       padding: 1rem 1rem;
       margin: 1rem;
       width: inherit;
+      padding-right: 80px;
     }
   }
   .list_design1 li {
     position: relative;
-    padding: 10px 20px;
+    padding: 20px 20px;
     padding-left: 63px;
-    line-height: 30px;
+    line-height: 20px;
     border-bottom: 2px dotted red;
     color: #333;
-    font-size: 24px;
+    font-size: 22px;
     margin-bottom: 5px;
     overflow-wrap: break-word;
     @include overTab {
@@ -140,7 +141,7 @@
       padding: 0 9px;
       height: 40px;
       line-height: 45px;
-      font-size: 30px;
+      font-size: 20px;
       background: #ea551c;
       color: #ffffff;
       font-weight: bold;
@@ -153,17 +154,17 @@
       font-size: 22px;
       margin: 0;
       padding: 0;
+      @include overTab {
+        font-size: 30px;
+      }
     }
   }
-  #emoji6:before {
-    content: "\01F91D";
-    padding-right: 3px;
-  }
+
   .video iframe {
     position: absolute;
     margin: 0 auto;
     width: auto;
-    top: 148%;
+    top: 162%;
     left: 50%;
     transform: translate(-50%, -50%);
     height: 200px;
@@ -177,45 +178,46 @@
   .mokumoku3 {
     position: absolute;
     z-index: 2;
-    top: 4%;
-    left: 60%;
+    top: 6%;
+    left: 65%;
     transform: translate(-50%, -50%);
     transform: rotate(15deg);
-    width: 150px;
+    width: 120px;
     height: 60px;
     @include overTab {
-      top: 10%;
+      top: 8%;
       left: 40%;
-      width: 350px;
+      width: 230px;
       height: 120px;
     }
   }
   .recommend3 {
     position: absolute;
     z-index: 2;
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bold;
-    top: 6%;
-    left: 62%;
+    top: 8%;
+    left:72%;
     transform: translate(-50%, -50%);
     transform: rotate(18deg);
     @include overTab {
-      top: 14%;
+      top: 12%;
       left: 45%;
-      font-size: 25px;
-    }
-    &::before {
-      font-family: "Font Awesome 5 Free";
-      content: "\f521";
-      padding: 5px;
-      font-weight: 900;
-      color: #ffdc00;
+      font-size: 40px;
     }
   }
+  #emoji1:before {
+    content: "\01F440";
+    padding-right: 3px;
+  }
+  #emoji2:before {
+    content: "\01F447";
+    padding-right: 3px;
+  }
   .area3-image1 {
-    width: 260px;
+    width: 250px;
     position: absolute;
-    top: 115%;
+    top: 125%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 4;
@@ -229,7 +231,7 @@
   .kira1 {
     width: 220px;
     position: absolute;
-    top: 105%;
+    top: 115%;
     left: 75%;
     transform: translate(-50%, -50%);
     z-index: 5;
@@ -242,7 +244,7 @@
   .kira2 {
     width: 220px;
     position: absolute;
-    top: 103%;
+    top: 113%;
     left: 35%;
     transform: translate(-50%, -50%);
     z-index: 5;
@@ -254,13 +256,13 @@
   }
   .circle3 {
     position: absolute;
-    top: 120%;
+    top: 130%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: rgba(210, 244, 247, 0.808);
     border-radius: 50%;
     box-shadow: 0.375em 0.375em 0 0 rgb(210, 255, 174);
-    height: 10em;
+    height: 8em;
     width: 20em;
     @include overTab {
       height: 15em;
@@ -274,13 +276,13 @@
     position: absolute;
     padding: 5px 0;
     width: 250px;
-    top: 125%;
+    top: 135%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 5;
     background-color: rgb(228, 8, 8);
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 1.4rem;
     font-style: italic;
     letter-spacing: 0.1em;
     color: #fff;
