--- a/scss/object/_area2.scss
+++ b/scss/object/_area2.scss
@@ -65,16 +65,17 @@
     @include overTab {
       padding: 1rem 1rem;
       margin: 1rem;
+      padding-right: 120px;
     }
   }
   .list_design1 li {
     position: relative;
-    padding: 10px 20px;
+    padding: 20px 20px;
     padding-left: 63px;
-    line-height: 30px;
+    line-height: 20px;
     border-bottom: 2px dotted red;
     color: #333;
-    font-size: 24px;
+    font-size: 22px;
     margin-bottom: 5px;
     @include overTab {
       font-size: 30px;
@@ -127,7 +128,7 @@
       width: 220px;
       height: auto;
       z-index: 4;
-      top: 240%;
+      top: 210%;
       left: 40%;
       transform: translate(-50%, -50%);
       @include overTab {
@@ -138,7 +139,7 @@
     }
     .area2-wifi3{
       width: 260px;
-      top: 250%;
+      top: 210%;
       left: 65%;
       @include overTab {
       width: 370px;
@@ -149,7 +150,7 @@
     .kira1 {
       width: 120px;
       position: absolute;
-      top: 246%;
+      top: 216%;
       left: 24%;
       transform: translate(-50%, -50%);
       z-index: 5;
@@ -162,7 +163,7 @@
     .kira2 {
       width: 180px;
       position: absolute;
-      top: 248%;
+      top: 218%;
       left: 58%;
       transform: translate(-50%, -50%);
       z-index: 5;
@@ -175,7 +176,7 @@
     .kira3 {
       width: 140px;
       position: absolute;
-      top: 260%;
+      top: 220%;
       left: 59%;
       transform: translate(-50%, -50%);
       transform: rotate(90deg);
@@ -203,40 +204,41 @@
   }
   .mokumoku {
     position: absolute;
-    top: -12%;
-    left: 60%;
+    top: -10%;
+    left: 70%;
     transform: translate(-50%, -50%);
     transform: rotate(15deg);
-    width: 150px;
+    width: 120px;
     height: 60px;
     @include overTab {
-      top: -20%;
+      top: -16%;
       left: 45%;
-      width: 300px;
+      width: 230px;
       height: 120px;
     }
   }
   .point {
     position: absolute;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
-    top: -8%;
-    left: 62%;
+    top: -6%;
+    left: 78%;
     transform: translate(-50%, -50%);
     transform: rotate(18deg);
     z-index: 6;
     @include overTab {
-      font-size: 25px;
-      top: -9%;
-      left: 49%;
+      font-size: 40px;
+      top: -8%;
+      left: 50%;
     }
-    &::before {
-      font-family: "Font Awesome 5 Free";
-      content: "\f521";
-      padding: 5px;
-      font-weight: 900;
-      color: #ffdc00;
-    }
+  }
+  #emoji1:before {
+    content: "\01F440";
+    padding-right: 3px;
+  }
+  #emoji2:before {
+    content: "\01F447";
+    padding-right: 3px;
   }
   .wifi-customer {
     position: absolute;
@@ -285,13 +287,13 @@
   }
   .circle {
     position: absolute;
-    top: 281%;
+    top: 255%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: white;
     border-radius: 50%;
     box-shadow: 0.375em 0.375em 0 0 rgb(247, 247, 125);
-    height: 9em;
+    height: 8em;
     width: 20em;
     @include overTab {
       height: 13em;
@@ -304,14 +306,14 @@
   .wifi-text {
     position: absolute;
     width: 220px;
-    top: 298%;
+    top: 268%;
     left: 50%;
     padding: 5px 0;
     transform: translate(-50%, -50%);
     z-index: 5;
     background-color: rgb(228, 8, 8);
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     font-style: italic;
     letter-spacing: 0.1em;
     color: #fff;
@@ -347,7 +349,7 @@
       padding: 0 9px;
       height: 40px;
       line-height: 45px;
-      font-size: 30px;
+      font-size: 20px;
       background: #ea551c;
       color: #ffffff;
       font-weight: bold;
@@ -355,10 +357,6 @@
       @include overTab {
         font-size: 40px;
       }
-    }
-    #emoji4:before {
-      content: "\01F91D";
-      padding-right: 3px;
     }
     .text-display {
       display: none;
@@ -397,7 +395,7 @@
     @include overTab {
       width: 440px;
       height: 260px;
-      top: -150%;
+      top: -70%;
       left: 80%;
     }
   }
