--- a/scss/object/_area3.scss
+++ b/scss/object/_area3.scss
@@ -63,6 +63,7 @@
     box-shadow: 2px 2px 4px gray;
     margin-right: 5px;
     margin-left: 5px;
+    padding-right: 20px;
     @include overTab {
       padding: 1rem 1rem;
       margin: 1rem;
