--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,7 @@ header .video iframe {
   height: 80px;
   border: white 1px solid;
   position: fixed;
-  right: 0px;
+  right: 15px;
   bottom: 90px;
   background: #d1022f;
   border-radius: 20px;
@@ -828,7 +828,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area1 .intro-text1 .text1-1-title {
-  font-size: 1.0rem;
+  font-size: 1rem;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -872,7 +872,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 #area1 .intro-text1 .price2 {
   color: #e43e5a;
   font-weight: 900;
-  font-size: 1.0rem;
+  font-size: 1rem;
   text-shadow: 1px 1px 0 #fff, -1px -1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff, 0px 1px 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff, 1px 0 0 #fff;
 }
 
@@ -884,7 +884,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 }
 
 #area1 .intro-text1 .price2 {
-  font-size: 1.0rem;
+  font-size: 1rem;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -950,8 +950,9 @@ footer .follow-me li a[href*="tiktok"]::before {
 
 @media print, screen and (min-width: 768px) {
   #area1 .video iframe {
-    width: 70%;
+    width: 80%;
     height: 100%;
+    max-width: 1200px;
   }
 }
 
@@ -959,6 +960,7 @@ footer .follow-me li a[href*="tiktok"]::before {
   position: relative;
   margin-left: 5px;
   margin-right: 5px;
+  margin-top: 60px;
 }
 
 @media print, screen and (min-width: 768px) {
@@ -3782,7 +3784,7 @@ footer .follow-me li a[href*="tiktok"]::before {
 @media print, screen and (min-width: 768px) {
   #area5 .area5-textarea {
     margin-left: 30px;
-    margin-bottom: 200px;
+    margin-bottom: 300px;
     width: 45%;
     max-width: 1300px;
   }
@@ -4020,6 +4022,48 @@ footer .follow-me li a[href*="tiktok"]::before {
     width: 400px;
     top: 80%;
     left: 75%;
+  }
+}
+
+#area5 .video {
+  width: 100%;
+  height: 200px;
+  position: relative;
+  margin-bottom: 50px;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area5 .video {
+    height: 500px;
+    margin-bottom: 100px;
+  }
+}
+
+#area5 .video iframe {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 90%;
+  height: 110%;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area5 .video iframe {
+    width: 90%;
+    height: 110%;
+    max-width: 1200px;
+  }
+}
+
+#area5 .videoo-merit {
+  margin-bottom: 50px;
+}
+
+@media print, screen and (min-width: 768px) {
+  #area5 .videoo-merit {
+    margin-bottom: 150px;
   }
 }
 
