--- a/scss/object/_area5.scss
+++ b/scss/object/_area5.scss
@@ -87,7 +87,7 @@
     background-color: rgba(255, 255, 255, 0.548);
     @include overTab {
       margin-left: 30px;
-      margin-bottom: 200px;
+      margin-bottom: 300px;
       width: 45%;
       max-width: 1300px;
     }
@@ -268,6 +268,40 @@
       left: 75%;
     }
   }
+
+  .video {
+    width: 100%;
+    height: 200px;
+    position: relative;
+    // margin-top: 50px;
+    margin-bottom: 50px;
+    @include overTab {
+      height: 500px;
+      margin-bottom: 100px;
+    }
+  }
+  .video iframe {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    height: 110%;
+    @include overTab {
+      width: 90%;
+      height: 110%;
+      max-width: 1200px;
+    }
+  }
+  .videoo-merit{
+    margin-bottom: 50px;
+    @include overTab {
+    margin-bottom: 150px;
+    }
+  }
+
+
+
   .area5-lower {
     margin-top: 100px;
     position: relative;
